src/App.css
@import url("https://fonts.googleapis.com/css?family=Roboto");

/* Global Styles */
:root {
  --primary-color: #24292e;
  --secondary-color: #586069;
  --dark-color: #333333;
  --light-color: #eff3f6;
  --danger-color: #dc3545;
  --success-color: #279f43;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Roboto", sans-serif;
  font-size: 1rem;
  line-height: 1.6;
  background-color: #fafbfc;
  color: #333;
}

a {
  color: #0366d6;
  text-decoration: none;
  word-break: break-all;
}

a:hover {
  text-decoration: underline;
}

ul {
  list-style: none;
}

img {
  width: 100%;
}

/* Utilities */
.container {
  max-width: 1280px;
  margin: 0 auto 2rem;
  overflow: hidden;
  padding: 0 2rem;
}

.flex-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.flex-column {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
}

/* Text Styles*/
.x-large {
  font-size: 4rem;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.large {
  font-size: 3rem;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.lead {
  font-size: 1.5rem;
  margin-bottom: 1rem;
}

.text-center {
  text-align: center;
}

.text-primary {
  color: var(--primary-color);
}

.text-secondary {
  font-size: 0.8rem;
  color: var(--secondary-color);
}

.text-dark {
  color: var(--dark-color);
}

.text-success {
  color: var(--success-color);
}

.text-danger {
  color: var(--danger-color);
}

.text-center {
  text-align: center;
}

.text-right {
  text-align: right;
}

.text-left {
  text-align: left;
}

/* Center All */
.all-center {
  display: flex;
  flex-direction: column;
  width: 100%;
  margin: auto;
  justify-content: center;
  align-items: center;
  text-align: center;
}

/* Cards */
.card {
  padding: 1rem;
  margin: 0.7rem 0;
  width: 100%;
  height: auto;
  box-shadow: rgba(0, 0, 0, 0.3) 0px 1.6px 3.6px 0px,
    rgba(0, 0, 0, 0.15) 0px 0.3px 0.9px 0px;
  background-color: #fff;
}

.card-repo-wrapper {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(2, 200px);
  grid-gap: 1rem;
}

.repo {
  padding: 0.5rem 1rem;
  margin: 0.7rem 0;
  width: 100%;
  height: auto;
  box-shadow: rgba(0, 0, 0, 0.3) 0px 1.6px 3.6px 0px,
    rgba(0, 0, 0, 0.15) 0px 0.3px 0.9px 0px;
  background-color: #fff;
}

.repo:hover {
  box-shadow: rgba(0, 0, 0, 0.7) 0px 1.6px 3.6px 0px,
    rgba(0, 0, 0, 0.45) 0px 0.3px 0.9px 0px;
  transform: scale(1.025);
}

/* List */
.list {
  margin: 0.5rem 0;
}

.list li {
  padding-bottom: 0.3rem;
}

/* Padding */
.p {
  padding: 0.5rem;
}

.p-1 {
  padding: 1rem;
}

.p-2 {
  padding: 2rem;
}

.p-3 {
  padding: 3rem;
}

.py {
  padding: 0.5rem 0;
}

.py-1 {
  padding: 1rem 0;
}

.py-2 {
  padding: 2rem 0;
}

.py-3 {
  padding: 3rem 0;
}

/* Margin */
.m {
  margin: 0.5rem;
}

.m-1 {
  margin: 1rem;
}

.m-2 {
  margin: 2rem;
}

.m-3 {
  margin: 3rem;
}

.my {
  margin: 0.5rem 0;
}

.my-1 {
  margin: 1rem 0;
}

.my-2 {
  margin: 2rem 0;
}

.my-3 {
  margin: 3rem 0;
}

i {
  margin-right: 10px;
}

i.far.fa-user {
  width: 1.1rem;
  margin-left: 0.2rem;
}

.fa-check,
.fa-times-circle {
  margin-left: 10px;
}

/* Grid */
.grid-2 {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 1rem;
}

.grid-3 {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 1rem;
}

.grid-4 {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-gap: 1rem;
}

.btn {
  display: inline-block;
  background: var(--light-color);
  color: #333;
  padding: 0.4rem 1.3rem;
  font-size: 1rem;
  border: none;
  cursor: pointer;
  margin-right: 0.5rem;
  transition: opacity 0.2s ease-in;
  outline: none;
}

.btn-ghb {
  position: relative;
  display: inline-block;
  color: #24292e;
  background-color: #eff3f6;
  background-image: linear-gradient(-180deg, #fafbfc, #eff3f6 90%);
  padding: 6px 12px;
  font-size: 14px;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  background-repeat: repeat-x;
  background-position: -1px -1px;
  background-size: 110% 110%;
  border: 1px solid rgba(27, 31, 35, 0.2);
  border-radius: 0.25em;
}

.btn-ghb:hover {
  background-color: #e6ebf1;
  background-image: linear-gradient(-180deg, #f0f3f6, #e6ebf1 90%);
  background-position: -0.5em;
  border-color: rgba(27, 31, 35, 0.35);
  text-decoration: none;
}

.btn-link {
  background: none;
  padding: 0;
  margin: 0;
}

.btn-block {
  display: block;
  width: 100%;
}

.btn-sm {
  font-size: 0.8rem;
  padding: 0.3rem 1rem;
  margin-right: 0.2rem;
}

ul .badge-wrapper {
  display: inline;
  margin-right: 1rem;
}

.badge-wrapper {
  display: block;
  font-size: 0.8rem;
  position: relative;
  padding: 0.2rem;
  height: 26px;
  line-height: 26px;
  text-decoration: none;
  text-align: center;
  border: 1px solid rgba(27, 31, 35, 0.2);
  border-radius: 0.3em;
}

.badge {
  display: block;
  position: absolute;
  top: -12px;
  right: -12px;
  line-height: 16px;
  height: 16px;
  padding: 0 5px;
  border-radius: 10px;
}

.alert {
  padding: 0.7rem;
  margin: 1rem 0;
  opacity: 0.9;
  background: var(--light-color);
  color: #333;
}

.btn-primary,
.bg-primary,
.badge-primary,
.alert-primary {
  background: var(--primary-color);
  color: #fff;
}

.btn-light,
.bg-light,
.badge-light,
.alert-light {
  background: var(--light-color);
  color: #24292e;
  background-image: linear-gradient(-180deg, #fafbfc, #eff3f6 90%);
}

.btn-dark,
.bg-dark,
.badge-dark,
.alert-dark {
  background: var(--dark-color);
  color: #fff;
}

.btn-danger,
.bg-danger,
.badge-danger,
.alert-danger {
  background: var(--danger-color);
  color: #fff;
}

.btn-danger,
.bg-danger,
.badge-danger,
.alert-danger {
  background: var(--danger-color);
  color: #fff;
}

.btn-success,
.bg-success,
.badge-success,
.alert-success {
  background: var(--success-color);
  color: #fff;
  border-color: rgba(27, 31, 35, 0.5);
  box-shadow: inset 0 0.15em 0.3em rgba(27, 31, 35, 0.15);
}

.btn-white,
.bg-white,
.badge-white,
.alert-white {
  background: #fff;
  color: #333;
  border: #ccc solid 1px;
}

.btn:hover {
  opacity: 0.8;
}

.bg-light,
.badge-light {
  border: #ccc solid 1px;
}

.round-img {
  border-radius: 50%;
}

/* Forms */
input {
  margin: 1.2rem 0;
}

.form-text {
  display: block;
  margin-top: 0.3rem;
  color: #888;
}

input[type="text"],
input[type="email"],
input[type="password"],
input[type="date"],
select,
textarea {
  display: block;
  width: 100%;
  padding: 0.4rem;
  font-size: 1.2rem;
  border: 1px solid #ccc;
}

input[type="submit"],
button {
  font: inherit;
}

table th,
table td {
  padding: 1rem;
  text-align: left;
}

table th {
  background: var(--light-color);
}

/* Navbar */
.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.7rem 2rem;
  z-index: 1;
  width: 100%;
  opacity: 0.9;
  margin-bottom: 1rem;
}

.navbar ul {
  display: flex;
}

.navbar .fa-github {
  margin-right: 10px;
}

.navbar a {
  color: #fff;
  padding: 0.45rem;
  margin: 0 0.25rem;
  font-weight: 600;
  white-space: nowrap;
}

.navbar a:hover {
  color: var(--light-color);
  text-decoration: none;
}

.navbar .welcome span {
  margin-right: 0.6rem;
}

.usersGrid {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-gap: 1rem;
}

@media (max-width: 1024px) {
  .usersGrid {
    grid-template-columns: repeat(3, 1fr);
  }

  .card-repo-wrapper {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(3, 200px);
    grid-gap: 1rem;
  }
}

/* Mobile Styles */
@media (max-width: 700px) {
  .hide-sm {
    display: none;
  }

  .grid-2,
  .grid-3,
  .grid-4 {
    grid-template-columns: 1fr;
  }

  .usersGrid {
    grid-template-columns: repeat(2, 1fr);
  }

  /* Text Styles */
  .x-large {
    font-size: 3rem;
  }

  .large {
    font-size: 2rem;
  }

  .lead {
    font-size: 1rem;
  }

  /* Navbar */
  .navbar {
    display: block;
    text-align: center;
  }

  .navbar ul {
    text-align: center;
    justify-content: center;
  }

  .card-repo-wrapper {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    grid-template-rows: repeat(6, 175px);
    grid-gap: 0.1rem;
  }
}

@media (max-width: 425px) {
  .usersGrid {
    grid-template-columns: 1fr;
  }

  .card-repo-wrapper {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    grid-gap: 0.1rem;
  }

  .repo {
    overflow-x: scroll;
  }
}

